# GNU-MAU

./: .gitignore  CHANGELOG.md  README.md  about_tab.py  convert_png_to_bytes.py  emoji_picker.py  icon.py  main.py  project_info_tab.py  project_note_tab.py  project_tab.py  project_todo_tab.py  pyproject.toml  setting_tab.py  setup.spec  todo_text_editor.py  utils.py
Notes/: crear certificado ssl FALBACK.txt  crear db postgres consola.txt  recuperar firma.txt
mongita_data/: $.metadata
mongita_data/projects_db/: $.metadata
mongita_data/projects_db.projects/: $.data  $.file_attrs  $.metadata
mongita_data/projects_db.todos/: $.data  $.file_attrs  $.metadata
notes/: Reinicio forzado de openresty.txt
storage/694d7a1d124d5938d5b9720b/: test demo.md
storage/694d9d901e70bd72c7a60c53/: test.md
